feat: Add styling and a height condition

--- a/index.html
+++ b/index.html
@@ -11,10 +11,24 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kalam:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon" />
     <title>Poke-wiki</title>
   </head>
   <body>
+    <header>
+      <img
+        src="./img/pokemon_wiki_logo.png"
+        alt="A pokémon head with 'Pokémon Wiki' text below"
+      />
+      <h1>Pokémon Wiki</h1>
+    </header>
     <script src="./js/scripts.js"></script>
   </body>
 </html>
