--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       />
       <h1>Pokémon Wiki</h1>
     </header>
+    <main>
+      <ul class="pokemon-list"></ul>
+    </main>
     <script src="./js/scripts.js"></script>
   </body>
 </html>
