feat: Add modal function upon clicking the name of a pokemon.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </header>
     <main>
       <ul class="pokemon-list"></ul>
+      <div class="modal-container"></div>
     </main>
     <script src="./js/promise-polyfill.js"></script>
     <script src="./js/fetch-polyfill.js"></script>
