feat: Add modal to display details on click

--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
   </head>
   <body>
     <header>
-      <img
-        src="./img/pokemon_wiki_logo.png"
-        alt="A pokémon head with 'Pokémon Wiki' text below"
-      />
+      <a href="./index.html"
+        ><img
+          src="./img/pokemon_wiki_logo.svg"
+          alt="A pokémon head with 'Pokémon Wiki' text below"
+      /></a>
+
       <h1>Pokémon Wiki</h1>
     </header>
     <main>
