--- a/index.html
+++ b/index.html
@@ -67,11 +67,9 @@
                 class="btn btn-secondary"
                 data-dismiss="modal"
               >
-                Close
+                Previous
               </button>
-              <button type="button" class="btn btn-primary">
-                Save changes
-              </button>
+              <button type="button" class="btn btn-primary">Next</button>
             </div>
           </div>
         </div>
