feat: Add bootstrap style

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h1>Pokémon Wiki</h1>
     </header>
     <main>
-      <ul class="pokemon-list"></ul>
+      <ul class="pokemon-list list-group gap-1"></ul>
       <div class="modal" tabindex="-1">
         <div class="modal-dialog">
           <div class="modal-content">
