--- a/index.html
+++ b/index.html
@@ -54,15 +54,23 @@
             <div class="modal-body">
               <p>Modal body text goes here.</p>
             </div>
-            <div class="modal-footer">
-              <img
-                src="./img/icon_arrow_left.svg"
-                alt="clickable arrow to show previous pokemon"
-              />
-              <img
-                src="./img/icon_arrow_right.svg"
-                alt="clickable arrow to show next pokemon"
-              />
+            <div class="modal-footer justify-content-between">
+              <div class="d-flex flex-column align-items-center">
+                <img
+                  class="modal-icons"
+                  src="./img/icon_arrow_left.svg"
+                  alt="clickable arrow to show previous pokemon"
+                />
+                <p class="mb-0 p-0">Previous</p>
+              </div>
+              <div class="d-flex flex-column align-items-center">
+                <img
+                  class="modal-icons"
+                  src="./img/icon_arrow_right.svg"
+                  alt="clickable arrow to show next pokemon"
+                />
+                <p class="mb-0 p-0 pe-1">Next</p>
+              </div>
             </div>
           </div>
         </div>
