feat: Add additional comments and include description for arrows
Description of arrows is "previous" and "next" respective to
ease user access and navigation.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       </nav>
     </header>
     <main>
+      <!-- Loading modal during fetching -->
       <div
         class="modal fade modal-fullscreen bg-secodnary position-absolute"
         id="loading-modal"
@@ -56,6 +57,8 @@
         </div>
       </div>
       <ul class="pokemon-list list-group gap-1"></ul>
+
+      <!-- Modal details for pokemons -->
       <div class="modal fade" id="pokemon-modal" tabindex="-1">
         <div class="modal-dialog">
           <div class="modal-content">
