--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
               type="text"
               placeholder="Search for pokemons..."
             />
+            <div class="pokemon-search-wrapper"></div>
             <img
               class="search-glass"
               src="./img/pokemon_search_glass.svg"
