feat: Add display modal for searched pokemon
Whenever user make an input and click on one of the search results in
the list, a modal is opened with additional details.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               type="text"
               placeholder="Search for pokemons..."
             />
-            <div class="pokemon-search-wrapper"></div>
+            <div class="pokemon-search-wrapper list-group"></div>
             <img
               class="search-glass"
               src="./img/pokemon_search_glass.svg"
