feat: Add dist folder and compressing

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       href="https://fonts.googleapis.com/css2?family=Kalam:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./dist/css/styles.css" />
     <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon" />
     <title>Poke-wiki</title>
   </head>
@@ -116,8 +116,8 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/promise-polyfill.js"></script>
-    <script src="./js/fetch-polyfill.js"></script>
-    <script src="./js/scripts.js"></script>
+    <script src="./dist/js/promise-polyfill.js"></script>
+    <script src="./dist/js/fetch-polyfill.js"></script>
+    <script src="./dist/js/scripts.js"></script>
   </body>
 </html>
